tests/lean/343.lean.expected.out
343.lean:24:4-24:24: warning: declaration uses 'sorry'
343.lean:30:0-30:54: error: stuck at solving universe constraint
  max (?u+1) (?u+1) =?= max (?u+1) (?u+1)
while trying to unify
  Catish.Obj Catish.Obj
with
  CatIsh.{max ?u ?u, max (?u + 1) (?u + 1)}
